        > data.table(x=letters[1:3],
                     y=list( 1:10, letters[1:4], data.table(a=1:3,b=4:6) ))
             x            y
        [1,] a 1,2,3,4,5,6,
        [2,] b      a,b,c,d
        [3,] c <data.table>
        

BUG FIXES

    o   DT[,f(.SD),by=colA] where f(x)=x[,colB:=1L] was a segfault, bug#1727.
        This is now a graceful error to say that using := in .SD's j is
        reserved for future use. Thanks to Leon Baum for reporting.
        
    o   If .N is selected by j it is now renamed "N" (no dot) in the output, to
        avoid a potential conflict in subsequent grouping between a column called
        ".N" and the special .N variable, fixing #1720. ?data.table updated and
        FAQ 4.6 added with detailed examples.
        
    o   Moved data.table setup code from .onAttach to .onLoad so that it
        is also run when data.table is simply `import`ed from within a package, 
        fixing #1916.
        
    o   Typos fixed in ?":=", thanks to Michael Weylandt for reporting.

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.0    **
        **                                          **
        **********************************************

NEW FEATURES

    o   character columns are now allowed in keys and are preferred to
        factor. data.table() and setkey() no longer coerce character to
        factor. Factors are still supported. Implements FR#1493, FR#1224
        and (partially) FR#951.
        
    o   setkey() no longer sorts factor levels. This should be more convenient
        and compatible with ordered factors where the levels are 'labels', in
        some order other than alphabetical. The established advice to paste each
        level with an ordinal prefix, or use another table to hold the factor
        labels instead of a factor column, is no longer needed. Solves FR#1420.